overflow fixed

--- a/css/WebRTSP.css
+++ b/css/WebRTSP.css
@@ -33,6 +33,7 @@ html, body {
     display: flex;
     flex-direction: row;
     flex-grow: 1;
+    overflow: auto;
 }
 
 #streamsContainer {
